--- a/howtohelp.html
+++ b/howtohelp.html
@@ -3,6 +3,11 @@
 
 </head>
 <body>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutkoalas.html">About Koalas</a></li>
+        <li><a href="howtohelp.html">How to help</a></li>
+    </ul>
     <div class="textblocks">
         <!-- SEE A KOALA -->
     </div>
