--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
 <html>
-    
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutkoalas.html">About Koalas</a></li>
+        <li><a href="howtohelp.html">How to help</a></li>
+    </ul>
+    <h1>
+        Who are we
+    </h1>
+    <p>
+        Arman Berek <br>Daniel Mallia <br>Bobur Hurramov <br>Kendrick Shao
+    </p>
 </html>
