--- a/howtohelp.html
+++ b/howtohelp.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a class = "active" href="index.html">Home</a></li>
         <li><a href="aboutkoalas.html">About Koalas</a></li>
         <li><a href="howtohelp.html">How to help</a></li>
     </ul>
