styled more fixed #7

--- a/howtohelp.html
+++ b/howtohelp.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
 </head>
 <body>
+    <div class ="nav">
     <ul>
         <li><a class = "active" href="index.html">Home</a></li>
         <li><a href="aboutkoalas.html">About Koalas</a></li>
         <li><a href="howtohelp.html">How to help</a></li>
     </ul>
+</div>
     <div class="textblocks">
         <!-- SEE A KOALA -->
     </div>
