--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
                 <li><a href="howtohelp.html">How to help</a></li>
             </ul>
         </div>
+        <div id = "pic1">  
+        </div>
         <h1>
             Who are we
         </h1>
