--- a/howtohelp.html
+++ b/howtohelp.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-</head>
-<body>
-    <div class ="nav">
-    <ul>
-        <li><a class = "active" href="index.html">Home</a></li>
-        <li><a href="aboutkoalas.html">About Koalas</a></li>
-        <li><a href="howtohelp.html">How to help</a></li>
-    </ul>
-</div>
-    <div class="textblocks">
-        <!-- SEE A KOALA -->
-    </div>
-    <div class="textblocks">
-        <!-- VOLUNTEERING/ORGANIZATIONS -->
-    </div>
-    <div class="textblocks">
-        <!-- WHERE TO DONATE -->
-    </div>
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <div class ="nav">
+            <ul>
+                <li><a class = "active" href="index.html">Home</a></li>
+                <li><a href="aboutkoalas.html">About Koalas</a></li>
+                <li><a href="howtohelp.html">How to help</a></li>
+            </ul>
+        </div>
+        <div class="textblocks">
+            <!-- SEE A KOALA -->
+        </div>
+        <div class="textblocks">
+            <!-- VOLUNTEERING/ORGANIZATIONS -->
+        </div>
+        <div class="textblocks">
+            <!-- WHERE TO DONATE -->
+        </div>
+    </body>
+</html>
