--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
+        <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="nav">
@@ -13,12 +14,15 @@
             </ul>
         </div>
         <div id = "pic1">  
+            <h1>SAVE THE KOALAS</h1>
         </div>
+        <div class="who">
         <h1>
             Who are we
         </h1>
         <p>
             Arman Berek <br>Daniel Mallia <br>Bobur Hurramov <br>Kendrick Shao
         </p>
+    </div>
     </body>
 </html>
