--- a/aboutkoalas.html
+++ b/aboutkoalas.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
+        <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class ="nav">
