--- a/howtohelp.html
+++ b/howtohelp.html
@@ -15,6 +15,7 @@
         </div>
         <div class="textblocks">
             <!-- SEE A KOALA -->
+            <img src="./public/th_donate.jpg" alt="koala donate">
         </div>
         <div class="textblocks">
             <!-- VOLUNTEERING/ORGANIZATIONS -->
