--- a/howtohelp.html
+++ b/howtohelp.html
@@ -21,7 +21,11 @@
             <!-- VOLUNTEERING/ORGANIZATIONS -->
         </div>
         <div class="textblocks">
-            <!-- WHERE TO DONATE -->
+            <p>Where to Donate</p>
+            <ul>
+                <li><a href="https://www.savethekoala.com/donate">Australian Koala Foundation</a></li>
+            </ul>
+            
         </div>
     </body>
 </html>
