--- a/howtohelp.html
+++ b/howtohelp.html
@@ -23,7 +23,11 @@
         <div class="textblocks">
             <p>Where to Donate</p>
             <ul>
-                <li><a href="https://www.savethekoala.com/donate">Australian Koala Foundation</a></li>
+                <li style="color:white"><a href="https://www.savethekoala.com/donate" style="color:white">Australian Koala Foundation</a></li>
+                <li style="color:white"><a href="https://www.savethekoala.com/donate" style="color:white">Australian Koala Foundation</a></li>
+                <li style="color:white"><a href="https://www.savethekoala.com/donate" style="color:white">Australian Koala Foundation</a></li>
+                <li style="color:white"><a href="https://www.savethekoala.com/donate" style="color:white">Australian Koala Foundation</a></li>
+                <li style="color:white"><a href="https://www.savethekoala.com/donate" style="color:white">Australian Koala Foundation</a></li>
             </ul>
             
         </div>
