crete page for savethekoalas GitHub Pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="who">
         <h1>
-            The Team
+            Our Team
         </h1>
         <p>
             Arman Berek <br>Daniel Mallia <br>Bobur Hurramov <br>Kendrick Shao
