--- a/aboutkoalas.html
+++ b/aboutkoalas.html
@@ -39,7 +39,13 @@
                 struggle to do so and if these are being destroyed at a terrifying rate. It is the latter matter that has made its way
                 into headlines around the world.</p>
 
-            <p>As you may have seen or read recently, wildfires have been rampaging across parts of Australia. These fires, which were 
+            <figure id="koalaFireImg">
+                <img src="https://static01.nyt.com/images/2019/11/25/multimedia/25xp-koalas/25xp-koalas-superJumbo.jpg?quality=90&auto=webp" width="256" height="171">
+                <figcaption>NY Times/Reuters image</figcaption>
+            </figure>
+
+            <p> 
+                As you may have seen or read recently, wildfires have been rampaging across parts of Australia. These fires, which were 
                 very concerning as early as Fall (Spring for Australia) 2019, have continued to devastate large swaths of land and in 
                 doing so, pose an enormous threat not only to human lives, but tragically also to koalas. Their suffering has become
                 the focus of a fair amount of media attention, in no small part because this is an issue that koalas are largely
