done with donations again

--- a/howtohelp.html
+++ b/howtohelp.html
@@ -13,6 +13,9 @@
                 <li><a href="howtohelp.html">How to help</a></li>
             </ul>
         </div>
+        <div class ="pleasedonate">
+            <h1>Please Help the Koalas by Donating to any of the Flollowing Organizations</h1>
+        </div>
     <div class = "donationns">
         <div class="gallery">
             <a target="_blank" href="https://donate.wwf.org.au/donate">
